# smartdry-lives

./: .gitignore  pyproject.toml
smartdry_lives/: __main__.py
smartdry_lives/firmware/: __init__.py  wifi.py
